# maris

./: .env.example  .gitignore  AGENT.md  LICENSE  README.md  SETUP_COMPLETE.md  debug_scala_parsing.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.sh  test_indexing_direct.py
.codex/: project-profile.md
.codex/specs/: _feature-template.md  git-agent.md  impact-analysis-agent.md  indexing-agent.md  multi-language-parser-support.md  repository-knowledge-layer.md  system-overview.md
.github/workflows/: workflow.yml
.maris/vectors/__manifest/_transactions/: 0-99dde0bf-7f3d-4cd0-85b1-369a3c63fd46.txn
docs/: ARCHITECTURE.md  CLI_GUIDE.md  CLI_README.md  CONFIGURATION.md  GETTING_STARTED.md  GIT_AGENT.md  GIT_AGENT_IMPLEMENTATION.md  IMPACT_ANALYSIS_AGENT.md  INSTALLATION.md  LANGGRAPH_MIGRATION.md  MULTI_LANGUAGE_SUPPORT.md  MVP_COMPLETE.md  PROJECT_WALKTHROUGH.md  PUBLISHING_TO_PYPI.md  TESTING_SCALA_PROJECT.md
examples/: ask_questions.py  basic_indexing.py  cli_quickstart.sh  generate_documentation.py  test_scala_project.sh
src/maris/: __init__.py
src/maris/agents/: __init__.py  documentation_agent.py  git_agent.py  impact_analysis_agent.py  indexing_agent.py  orchestrator_agent.py  qa_agent.py
src/maris/cli/: __init__.py  main.py
src/maris/config/: __init__.py  settings.py
src/maris/core/: __init__.py  models.py
src/maris/embeddings/: __init__.py  ollama_embeddings.py
src/maris/indexing/: __init__.py  bash_parser.py  config_parser.py  java_parser.py  javascript_parser.py  markdown_parser.py  parser.py  parser_factory.py  python_parser.py  scala_parser.py  typescript_parser.py
src/maris/knowledge/: __init__.py  repository_knowledge_impl.py  service.py
src/maris/storage/: __init__.py  metadata_store.py  vector_store.py
src/maris/utils/: __init__.py  validation.py
tests/: __init__.py  test_bash_parser.py  test_dependency_extraction.py  test_documentation_agent.py  test_git_agent.py  test_impact_analysis_agent.py  test_indexing_agent.py  test_java_parser.py  test_javascript_parser.py  test_ollama_embeddings.py  test_orchestrator_agent.py  test_parser_factory.py  test_python_parser.py  test_qa_agent.py  test_scala_parser.py  test_typescript_parser.py
